# rust-rest-api-axum

./: .env.local  Cargo.toml  README.md
docs/: concepts.md  db_connection.md  learn_api_rust.md
src/: lib.rs  main.rs
src/db/: db.rs  mod.rs  sql_db.rs
src/db/repositories/: mod.rs  sql_post_repo.rs  sql_user_repo.rs  user_repo.rs
src/handlers/: auth_handlers.rs  handlers.rs  mod.rs  post_handlers.rs
src/helpers/: auth.rs  middleware.rs  mod.rs  response.rs  user_helpers.rs  validation.rs
src/model/: model.rs
tests/: integration_test.rs
