[package]
name = "api-rustone"
version = "0.1.0"
edition = "2021"

[dependencies]
axum="0.8.4"
tokio={version="1", features=["full"]}
serde={version="1.0", features=["derive"]}
serde_json="1.0.140"
tower="0.5.2"
tower-http={version="0.6.4",features=["trace", "cors"]}
tracing="0.1.41"
tracing-subscriber={version="0.3.19", features=["env-filter"]}
uuid = { version = "1.16.0", features = ["v4"] }
mongodb = "3.2.3"
regex = "1.10.3"
lazy_static = "1.4.0"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"

